--- a/chartacaeli/caa/Makefile
+++ b/chartacaeli/caa/Makefile
@@ -5,53 +5,50 @@ else
 endif
 
 # AA+ V1.73
-JPKG  = caa
-CPKG  = aaplus
+DST = aaplus
+JNI = caa
 
-srcdir  = src
+PKG = chartacaeli.$(JNI)
 
-AAZIP = $(CPKG).zip
+# top-level diretory is current minus package (e.g. /foo/bar/hot minus bar.hot yields /foo)
+topdir = $(subst $(subst .,/,$(PKG)),,$(CURDIR))
+srcdir = src
+
+AAZIP = $(DST).zip
 AAURL = http://www.naughter.com/download/$(AAZIP)
 ifdef winos
-AADLL = $(CPKG).dll
+AADLL = $(DST).dll
 AAEXE = AATest.exe
 
-JAADLL = $(JPKG).dll
+CAADLL = $(JNI).dll
 else
-AADLL = lib$(CPKG).so
+AADLL = lib$(DST).so
 AAEXE = AATest
 
-JAADLL = lib$(JPKG).so
+CAADLL = lib$(JNI).so
 endif
-JAAJAR = $(JPKG).jar
 
 # default goal
 $(srcdir): $(AAZIP)
 	unzip -o `basename $(AAURL)` -d $@
-	@echo AAHDR = `find $(srcdir) -name '*.h' -print` >Makefile.d
-	@echo AASRC = `find $(srcdir) -name '*.cpp' -print` >>Makefile.d
 	# pre-process and rename header files to avoid no classes found errors of CXXWRAP
 	( cd $(srcdir) ; for h in AA[!+]*.h ; do $(CXX) -E $$h -o ../C$$h ; done )
-	for h in C*.h ; do $(CXXWRAP) --jni --jni-attributes --package-prefix=$(JPKG) $$h ; done
+	for h in C*.h ; do \
+		$(CXXWRAP) \
+			--jni --jni-attributes \
+			--classpath=$(topdir) \
+			--package-prefix=$(PKG) $$h ; done
 	# restore original header files due to redefined type errors of CXX
 	( cd $(srcdir) ; for h in AA[!+]*.h ; do ln -f $$h ../C$$h ; done )
-	@echo JNIJSRC = `find $(JPKG) -name 'C*.java' -print` >>Makefile.d
 
-$(AAZIP):
-	wget -q -O $@ $(AAURL)
-
--include Makefile.d
-
-AADLLSRC = $(filter-out $(srcdir)/AATest.cpp $(srcdir)/stdafx.cpp,$(AASRC))
+AADLLSRC = $(filter-out $(srcdir)/AATest.cpp $(srcdir)/stdafx.cpp,$(wildcard $(srcdir)/*.cpp))
 AADLLOBJ = $(patsubst $(srcdir)/%.cpp,%.o,$(AADLLSRC))
 
-JNIJCLS = $(subst .java,.class,$(JNIJSRC))
-JNICSRC = $(subst .java,_jni.cxx,$(JNIJSRC))
-JNICOBJ = $(subst .cxx,.o,$(JNICSRC))
+CAADLLOBJ = $(subst .cxx,.o,$(wildcard *_jni.cxx))
+CAADLLOBJ := $(filter-out _%,$(CAADLLOBJ))
 
 .PHONY: all clean lclean rclean tidy
-.SUFFIXES: .cxx
-.SECONDARY:
+.SUFFIXES: .cxx .dll .so
 
 vpath %.cpp $(srcdir)
 
@@ -65,6 +62,12 @@ ifdef winos
 	-I"$(JAVA_HOME)/include/win32" \
 	-I. -I$(srcdir) \
 	-c $< -o $@
+
+$(CAADLL): $(AADLL) $(CAADLLOBJ)
+	$(CXX) -Wall -shared \
+	-static-libgcc -static-libstdc++ \
+	-o $@ $(CAADLLOBJ) \
+	-L. -l$(DST)
 else
 .cpp.o:
 	$(CXX) -Wall -shared -fPIC -c $< -o $@
@@ -75,44 +78,38 @@ else
 	-I$(JAVA_HOME)/include/linux \
 	-I. -I$(srcdir) \
 	-c $< -o $@
-endif
 
-$(JAAJAR):
-	javac -d . $(JNIJSRC)
-	jar -cf $@ `find $(JPKG) -name '*.class' -print`
-
-ifdef winos
-$(JAADLL): $(AADLL) $(JNICOBJ)
-	$(CXX) -Wall -shared \
-	-static-libgcc -static-libstdc++ \
-	-o $@ $(JNICOBJ) \
-	-L. -l$(CPKG)
-else
-$(JAADLL): $(JNICOBJ)
+$(CAADLL): $(AADLL) $(CAADLLOBJ)
 	$(CXX) -Wall -shared \
 	-o $@ $^ \
-	-L. -l$(CPKG)
+	-L. -l$(DST)
 endif
+
+$(AAZIP):
+	wget -q -O $@ $(AAURL)
 
 $(AADLL): $(AADLLOBJ)
 	$(CXX) -Wall -shared \
 	-o $@ $^
 
 $(AAEXE): AATest.o $(AADLL)
-	$(CXX) -o $@ $< -L. -l$(CPKG)
+	$(CXX) -o $@ $< -L. -l$(DST)
 
-all: $(JAADLL) $(JAAJAR)
+all: $(CAADLL)
 
 # compiler objects
 clean:
-	rm -f $(AADLLOBJ) AATest.o $(JNICOBJ)
-	find $(JPKG) -name '*.class' -exec rm -f {} \;
+	rm -f *.o
 
 # local clean
 lclean: clean
-	rm -rf $(srcdir) $(JPKG)
-	rm -f C*.h Makefile.d
-	rm -f $(AADLL) $(AAEXE) $(JAADLL) $(JAAJAR)
+	# restrict removal of header files on those found in $(srcdir) 
+	( cd $(srcdir) ; for h in AA[^+]*.h ; do rm -f ../C$$h ; done )
+	rm -rf $(srcdir)
+	# derive Java classes from .cxx files
+	rm -f $(subst _jni.cxx,.java,$(wildcard *_jni.cxx))
+	rm -f $(wildcard *_jni.cxx)
+	rm -f $(AADLL) $(CAADLL) $(AAEXE)
 
 # real clean
 rclean: lclean
