--- a/chartacaeli.properties
+++ b/chartacaeli.properties
@@ -881,4 +881,4 @@ chartacaeli.CatalogADC7237Record.substitute.ANames                 = ANames
 chartacaeli.CatalogADC7237Record.message.ereclen                   = {0} character per per entry expected.
 chartacaeli.CatalogADC7237Record.message.erecval                   = {0} mismatched expected pattern {1}.
 
-chartacaeli.Artwork.message.runtime                                = Method {0} took {1} msec.
+chartacaeli.Artwork.message.runtime                                = {0}.main() took {1} msec.
